php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #79830 Memory leak in zend_hash and zend_string
Submitted: 2020-07-11 02:45 UTC Modified: 2020-07-11 05:50 UTC
From: changochen1 at gmail dot com Assigned: twosee (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 8.0Git-2020-07-11 (Git) OS:
Private report: No CVE-ID: None
 [2020-07-11 02:45 UTC] changochen1 at gmail dot com
Description:
------------
LOG:
---
[Fri Jul 10 22:44:16 2020]  Script:  '/home/yongheng/php_commit/php_poc24.php'
/home/yongheng/php_clean/Zend/zend_hash.c(278) :  Freeing 0x00007f1300e585a0 (56 bytes), script=/home/yongheng/php_commit/php_poc24.php
[Fri Jul 10 22:44:16 2020]  Script:  '/home/yongheng/php_commit/php_poc24.php'
/home/yongheng/php_clean/Zend/zend_hash.c(171) :  Freeing 0x00007f1300e6dc00 (320 bytes), script=/home/yongheng/php_commit/php_poc24.php
[Fri Jul 10 22:44:16 2020]  Script:  '/home/yongheng/php_commit/php_poc24.php'
/home/yongheng/php_clean/Zend/zend_string.h(141) :  Freeing 0x00007f1300e80a00 (224 bytes), script=/home/yongheng/php_commit/php_poc24.php
Last leak repeated 1 time
=== Total 4 memory leaks detected ===
---

Test script:
---------------
<?
spl_autoload_register ( function () {
    ob_start ( function () {
        var_dump ( function ( $a ) {     }                    ) ;
    }
)  ;
}
) ;
try {
    new  (   'p' ) ;
}
catch ( b ) {       }


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2020-07-11 04:30 UTC] twosee@php.net
-Status: Open +Status: Verified
 [2020-07-11 05:50 UTC] twosee@php.net
-Status: Verified +Status: Assigned -Assigned To: +Assigned To: twosee
 [2020-07-11 06:48 UTC] twosee@php.net
Automatic comment on behalf of twose@qq.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=56dec3cc73829cefe9817d4c59ea3873dde1f443
Log: Fixed bug #79830 introduced by fixing bug #79821
 [2020-07-11 06:48 UTC] twosee@php.net
-Status: Assigned +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 11 22:00:01 2026 UTC